Refine footer payment badges

--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -1272,11 +1272,9 @@
           <label><input type="checkbox" name="show_newsletter" /> Mostrar newsletter</label>
           <label><input type="checkbox" name="show_legal" /> Mostrar legal</label>
           <label><input type="checkbox" name="badge_mercadoPago" /> Mercado Pago</label>
-          <label><input type="checkbox" name="badge_ssl" /> SSL</label>
           <label><input type="checkbox" name="badge_andreani" /> Andreani</label>
-          <label><input type="checkbox" name="badge_oca" /> OCA</label>
-          <label><input type="checkbox" name="badge_dhl" /> DHL</label>
-          <label><input type="checkbox" name="badge_authenticity" /> Autenticidad</label>
+          <label><input type="checkbox" name="badge_efectivo" /> Efectivo</label>
+          <label><input type="checkbox" name="badge_transferencia" /> Transferencia bancaria</label>
           <input type="color" name="accentFrom" value="#FFD54F" />
           <input type="color" name="accentTo" value="#FFC107" />
           <input type="color" name="bg" value="#ffffff" />
