--- a/nerin_final_updated/frontend/pages/precheckout.html
+++ b/nerin_final_updated/frontend/pages/precheckout.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="es">
   <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-W0NY5MHXND"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-W0NY5MHXND');
+  </script>
+
     <meta http-equiv="refresh" content="0; url=/checkout-steps.html" />
     <title>Redirigiendo…</title>
     <script>window.location.replace('/checkout-steps.html');</script>
