Update favicon references to new PNG

--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -81,7 +81,17 @@
       name="twitter:image:alt"
       content="Pantallas Samsung originales listas para enviar"
     />
-    <link rel="icon" type="image/svg+xml" href="/assets/np-logo.svg" />
+    <link
+      rel="icon"
+      href="/favicon-nerin-512.png"
+      type="image/png"
+      sizes="512x512"
+    />
+    <link
+      rel="shortcut icon"
+      href="/favicon-nerin-512.png"
+      type="image/png"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
