--- a/nerin_final_updated/frontend/product.html
+++ b/nerin_final_updated/frontend/product.html
@@ -72,7 +72,17 @@
       data-seo-absolute="href"
       data-product-meta="canonical"
     />
-    <link rel="icon" type="image/svg+xml" href="/assets/np-logo.svg" />
+    <link
+      rel="icon"
+      href="/favicon-nerin-512.png"
+      type="image/png"
+      sizes="512x512"
+    />
+    <link
+      rel="shortcut icon"
+      href="/favicon-nerin-512.png"
+      type="image/png"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
