--- a/nerin_final_updated/frontend/shop.html
+++ b/nerin_final_updated/frontend/shop.html
@@ -79,7 +79,17 @@
       name="twitter:image:alt"
       content="Catálogo completo de repuestos Samsung, iPhone y Motorola"
     />
-    <link rel="icon" type="image/svg+xml" href="/assets/np-logo.svg" />
+    <link
+      rel="icon"
+      href="/favicon-nerin-512.png"
+      type="image/png"
+      sizes="512x512"
+    />
+    <link
+      rel="shortcut icon"
+      href="/favicon-nerin-512.png"
+      type="image/png"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
