Enhance product SEO generation and admin controls

--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -581,18 +581,18 @@
               </button>
             </div>
             <div id="seoAdvancedFields" class="seo-advanced form-grid-span is-collapsed">
-              <label for="productMetaTitle">Meta título (opcional)</label>
+              <label for="productSeoTitle">SEO Title (opcional)</label>
               <input
                 type="text"
-                id="productMetaTitle"
-                name="meta_title"
-                placeholder="Meta título"
+                id="productSeoTitle"
+                name="seoTitle"
+                placeholder="Módulo Pantalla Samsung Galaxy A55 5G A556 Original Service Pack GH82-34305A | NERIN Parts"
               />
-              <label for="productMetaDesc">Meta descripción (opcional)</label>
+              <label for="productSeoDesc">SEO Description (opcional)</label>
               <textarea
-                id="productMetaDesc"
-                name="meta_description"
-                placeholder="Meta descripción"
+                id="productSeoDesc"
+                name="seoDescription"
+                placeholder="Módulo pantalla Samsung Galaxy A55 5G A556 original Service Pack GH82-34305A. Super AMOLED 6,6&quot; FHD+ 120 Hz con marco, listo para instalar. Envíos a todo Argentina, factura A/B y garantía técnica NERIN."
                 rows="3"
               ></textarea>
             </div>
