--- a/nerin_final_updated/frontend/product.html
+++ b/nerin_final_updated/frontend/product.html
@@ -17,16 +17,16 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <title data-product-meta="title">
-      Repuesto ORIGINAL Service Pack | NERIN Parts
+      Módulo Pantalla Samsung Original Service Pack | NERIN Parts
     </title>
     <meta
       name="description"
-      content="Repuestos originales Service Pack con garantía en NERIN Parts."
+      content="Módulo pantalla Samsung original Service Pack. Con marco, listo para instalar. Envíos a todo Argentina, factura A/B y garantía técnica NERIN."
       data-product-meta="description"
     />
     <meta
       name="keywords"
-      content="pantallas originales, repuestos samsung, service pack"
+      content="módulo pantalla samsung, repuestos originales, service pack nerin"
       data-product-meta="keywords"
     />
     <meta name="robots" content="index,follow" />
@@ -35,12 +35,12 @@
     <meta property="og:type" content="product" />
     <meta
       property="og:title"
-      content="Pantallas originales con garantía | NERIN"
+      content="Módulo Pantalla Samsung Original Service Pack | NERIN Parts"
       data-product-meta="og:title"
     />
     <meta
       property="og:description"
-      content="Repuestos originales para técnicos y particulares en Argentina."
+      content="Módulo pantalla Samsung original Service Pack. Con marco, listo para instalar. Envíos a todo Argentina, factura A/B y garantía técnica NERIN."
       data-product-meta="og:description"
     />
     <meta
@@ -52,12 +52,12 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Pantallas originales con garantía | NERIN"
+      content="Módulo Pantalla Samsung Original Service Pack | NERIN Parts"
       data-product-meta="twitter:title"
     />
     <meta
       name="twitter:description"
-      content="Pantallas Samsung originales Service Pack con envío rápido."
+      content="Módulo pantalla Samsung original Service Pack. Con marco, listo para instalar. Envíos a todo Argentina, factura A/B y garantía técnica NERIN."
       data-product-meta="twitter:description"
     />
     <meta
