Implement dynamic product SEO metadata

--- a/nerin_final_updated/frontend/product.html
+++ b/nerin_final_updated/frontend/product.html
@@ -16,33 +16,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
-    <title data-product-meta="title">
-      Módulo Pantalla Samsung Original Service Pack | NERIN Parts
-    </title>
-    <meta
-      name="description"
-      content="Módulo pantalla Samsung original Service Pack. Con marco, listo para instalar. Envíos a todo Argentina, factura A/B y garantía técnica NERIN."
-      data-product-meta="description"
-    />
-    <meta
-      name="keywords"
-      content="módulo pantalla samsung, repuestos originales, service pack nerin"
-      data-product-meta="keywords"
-    />
+    <title data-product-meta="title"></title>
+    <meta name="description" content="" data-product-meta="description" />
+    <meta name="keywords" content="" data-product-meta="keywords" />
     <meta name="robots" content="index,follow" />
     <meta property="og:locale" content="es_AR" />
     <meta property="og:site_name" content="NERIN Repuestos" />
     <meta property="og:type" content="product" />
-    <meta
-      property="og:title"
-      content="Módulo Pantalla Samsung Original Service Pack | NERIN Parts"
-      data-product-meta="og:title"
-    />
-    <meta
-      property="og:description"
-      content="Módulo pantalla Samsung original Service Pack. Con marco, listo para instalar. Envíos a todo Argentina, factura A/B y garantía técnica NERIN."
-      data-product-meta="og:description"
-    />
+    <meta property="og:title" content="" data-product-meta="og:title" />
+    <meta property="og:description" content="" data-product-meta="og:description" />
     <meta
       property="og:url"
       content="__BASE_URL__/product.html"
@@ -50,16 +32,8 @@
       data-product-meta="og:url"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Módulo Pantalla Samsung Original Service Pack | NERIN Parts"
-      data-product-meta="twitter:title"
-    />
-    <meta
-      name="twitter:description"
-      content="Módulo pantalla Samsung original Service Pack. Con marco, listo para instalar. Envíos a todo Argentina, factura A/B y garantía técnica NERIN."
-      data-product-meta="twitter:description"
-    />
+    <meta name="twitter:title" content="" data-product-meta="twitter:title" />
+    <meta name="twitter:description" content="" data-product-meta="twitter:description" />
     <meta
       name="twitter:url"
       content="__BASE_URL__/product.html"
