Add QA reference for preview and contact fixes

--- a/nerin_final_updated/frontend/contact.html
+++ b/nerin_final_updated/frontend/contact.html
@@ -102,7 +102,7 @@
 }
     </script>
 </head>
-  <body>
+  <body class="contact-page">
     <header>
       <div class="header-inner">
         <div class="logo"><a href="/index.html" class="brand"><img src="../assets/IMG_3086.png" alt="NERIN" class="site-logo" /></a></div>
