--- a/nerin_final_updated/frontend/login.html
+++ b/nerin_final_updated/frontend/login.html
@@ -54,13 +54,36 @@
         <input type="email" id="email" required />
         <label for="password">Contraseña</label>
         <input type="password" id="password" required />
-        <div class="forgot-wrapper">
-          <a href="mailto:soporte@nerin.com?subject=Recuperar%20contrase%C3%B1a"
-            >¿Olvidaste tu contraseña?</a
-          >
-        </div>
         <button type="submit">Iniciar sesión</button>
       </form>
+      <section class="forgot-card" id="forgotCard">
+        <div class="forgot-card__header">
+          <div>
+            <p class="forgot-card__eyebrow">Acceso mayorista</p>
+            <h3>¿Olvidaste tu contraseña?</h3>
+            <p class="forgot-card__lead">
+              Te pedimos el correo que está cargado en el admin (Render Disk) para enviarte las instrucciones con Resend.
+            </p>
+          </div>
+          <button type="button" class="forgot-toggle" id="forgotToggle">Cerrar</button>
+        </div>
+        <form id="forgotForm" class="forgot-form is-open" novalidate>
+          <label for="forgotEmail">Correo registrado</label>
+          <input
+            type="email"
+            id="forgotEmail"
+            name="forgotEmail"
+            autocomplete="email"
+            placeholder="tu-correo@ejemplo.com"
+            required
+          />
+          <p class="forgot-hint">
+            Verificamos que el correo exista en el administrador antes de enviar el mail de recuperación.
+          </p>
+          <div class="forgot-feedback" id="forgotFeedback" role="status" aria-live="polite"></div>
+          <button type="submit" class="forgot-submit">Enviar correo de recuperación</button>
+        </form>
+      </section>
     </main>
     <div id="whatsapp-button">
       <a href="https://wa.me/541112345678" target="_blank" data-whatsapp-link>
